Fix cursor wobble around chimeras
Adjusting the height of the chimera appears to fix the vertical
wobble of the cursor, which can be placed either side of the
'invisible' marker. Different browsers respond differently so
implement hacks on a per-browser basis.

--- a/src/ce/styles/nodes/ve.ce.BranchNode.css
+++ b/src/ce/styles/nodes/ve.ce.BranchNode.css
@@ -57,6 +57,28 @@
 	background-size: auto;
 }
 
+.ve-ce-chimera {
+	width: 0;
+	height: 0;
+}
+
+.ve-ce-chimera-webkit {
+	/* Cursor positioning tweak */
+	width: 1px;
+	height: 1em;
+}
+
+.ve-ce-chimera-gecko {
+	/* Cursor positioning tweak */
+	width: 1px;
+	height: 0.5em;
+}
+
+.ve-ce-chimera-debug {
+	width: auto;
+	height: auto;
+}
+
 /* Pre-formatted node styling */
 
 pre.ve-ce-branchNode {
